--- a/src/main/resources/Rembourssement.fxml
+++ b/src/main/resources/Rembourssement.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="590.0" prefWidth="857.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.rembourssement">
    <children>
@@ -14,7 +17,20 @@
       <TextField fx:id="moisCol" layoutX="229.0" layoutY="113.0" promptText="mois" />
       <TextField fx:id="payeeCol" layoutX="239.0" layoutY="201.0" promptText="Montant payeé" />
       <TextField fx:id="retardCol" layoutX="239.0" layoutY="283.0" promptText="periode retard" />
-      <Button layoutX="352.0" layoutY="415.0" mnemonicParsing="false" onAction="#ajoutRmb" text="ajouter" />
-      <Button layoutX="481.0" layoutY="415.0" mnemonicParsing="false" onAction="#afficheRmb" text="afficher" />
+      <Button layoutX="352.0" layoutY="415.0" mnemonicParsing="false" onAction="#ajoutRmb" style="-fx-background-color: blue;" text="ajouter" textFill="#d3d1e4" />
+      <Button layoutX="481.0" layoutY="415.0" mnemonicParsing="false" onAction="#afficheRmb" style="-fx-background-color: orange;" text="afficher" />
+      <ImageView fitHeight="220.0" fitWidth="315.0" layoutX="462.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
+
+      </ImageView>
+      <Label layoutX="98.0" layoutY="14.0" text="Add Rmb" textFill="#1329b9">
+         <font>
+            <Font size="47.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="231.0" fitWidth="349.0" layoutX="480.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@remboursement-avec-le-cheque-energie.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
