--- a/src/main/resources/AfficherPret.fxml
+++ b/src/main/resources/AfficherPret.fxml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="634.0" prefWidth="1249.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.afficher">
+<AnchorPane prefHeight="663.0" prefWidth="1249.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.afficher">
    <children>
-      <TableView fx:id="tableView" layoutY="98.0" prefHeight="479.0" prefWidth="741.0">
+      <TableView fx:id="tableView" layoutX="23.0" layoutY="51.0" prefHeight="500.0" prefWidth="899.0" styleClass="form_container" stylesheets="@style.css">
         <columns>
           <TableColumn fx:id="montantCol" prefWidth="153.0" text="Montant" />
           <TableColumn fx:id="typeCol" prefWidth="182.0" text="type" />
             <TableColumn fx:id="periodeCol" prefWidth="85.0" text="periode" />
             <TableColumn fx:id="descriptionCol" prefWidth="240.0" text="description" />
-            <TableColumn fx:id="idCol" prefWidth="76.0" text="id" />
+            <TableColumn fx:id="idCol" prefWidth="140.0" text="id" />
+            <TableColumn fx:id="interetCol" prefWidth="88.0" text="interet" />
         </columns>
       </TableView>
-      <Button layoutX="675.0" layoutY="609.0" mnemonicParsing="false" onAction="#addPret" text="ajouter" />
-      <TextField fx:id="idTF" layoutX="757.0" layoutY="131.0" promptText="id" />
-      <TextField fx:id="montantTF" layoutX="757.0" layoutY="197.0" promptText="Montant" />
-      <TextField fx:id="typeTF" layoutX="747.0" layoutY="259.0" promptText="Tyoe" />
-      <TextField fx:id="periodeTF" layoutX="747.0" layoutY="325.0" promptText="periode" />
-      <TextField fx:id="descriptionTF" layoutX="747.0" layoutY="415.0" promptText="description" />
-      <Button layoutX="770.0" layoutY="609.0" mnemonicParsing="false" onAction="#modifPret" text="modifier" />
-      <Button layoutX="840.0" layoutY="609.0" mnemonicParsing="false" onAction="#deletePret" text="delete" />
+      <Button fx:id="addPret" layoutX="633.0" layoutY="574.0" mnemonicParsing="false" onAction="#addPret" prefHeight="48.0" prefWidth="114.0" style="-fx-background-color: green;" text="ajouter" textFill="#ddc5c5" />
+      <Button layoutX="767.0" layoutY="574.0" mnemonicParsing="false" onAction="#modifPret" prefHeight="48.0" prefWidth="95.0" style="-fx-background-color: orange;" text="modifier" />
+      <Button layoutX="878.0" layoutY="571.0" mnemonicParsing="false" onAction="#deletePret" prefHeight="37.0" prefWidth="140.0" style="-fx-background-color: red;" text="delete" />
+      <VBox layoutX="957.0" layoutY="61.0" prefHeight="342.0" prefWidth="140.0" spacing="8.0">
+         <children>
+            <TextField fx:id="idTF" prefHeight="37.0" prefWidth="147.0" promptText="id" styleClass="form_container" stylesheets="@style.css" />
+            <TextField fx:id="montantTF" promptText="Montant" styleClass="form_container" stylesheets="@style.css" />
+            <TextField fx:id="typeTF" promptText="Tyoe" styleClass="form_container" stylesheets="@style.css" />
+            <TextField fx:id="periodeTF" promptText="periode" styleClass="form_container" stylesheets="@style.css" />
+            <TextField fx:id="descriptionTF" promptText="description" styleClass="form_container" stylesheets="@style.css" />
+         </children>
+      </VBox>
+      <Label layoutX="128.0" layoutY="6.0" text="Liste Demandes Pret" textFill="#0e1df8">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
+      <Button fx:id="chartt" layoutX="989.0" layoutY="411.0" mnemonicParsing="false" onAction="#statistique" prefHeight="116.0" prefWidth="108.0" text="stat" textFill="#b21b1b" />
+      <Button layoutX="387.0" layoutY="577.0" mnemonicParsing="false" onAction="#pdf" prefHeight="37.0" prefWidth="95.0" text="Pdf" />
    </children>
 </AnchorPane>
