--- a/src/main/resources/Pret.fxml
+++ b/src/main/resources/Pret.fxml
@@ -9,17 +9,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="641.0" prefWidth="1119.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.pret">
+<AnchorPane prefHeight="641.0" prefWidth="1119.0" styleClass="form_container" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.pret">
    <children>
       <Label layoutX="117.0" layoutY="126.0" text="Montant" />
       <TextArea fx:id="montantTF" layoutX="247.0" layoutY="113.0" prefHeight="42.0" prefWidth="398.0" promptText="Montant" />
-      <Button layoutX="374.0" layoutY="417.0" mnemonicParsing="false" onAction="#ajoutPret" prefHeight="31.0" prefWidth="78.0" text="Add Pret" />
+      <Button layoutX="374.0" layoutY="417.0" mnemonicParsing="false" onAction="#ajoutPret" prefHeight="31.0" prefWidth="78.0" style="-fx-background-color: blue;" text="Add Pret" textFill="#f2f2f2" />
       <Label layoutX="117.0" layoutY="186.0" text="Type" />
       <Label layoutX="117.0" layoutY="245.0" text="Periode" />
       <TextArea fx:id="periodeTF" layoutX="247.0" layoutY="241.0" prefHeight="42.0" prefWidth="398.0" promptText="Periode" />
       <Label layoutX="117.0" layoutY="312.0" text="Description" />
       <TextArea fx:id="descriptionTF" layoutX="247.0" layoutY="308.0" prefHeight="42.0" prefWidth="398.0" promptText="Description" />
-      <Text layoutX="140.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter un Pret" wrappingWidth="178.74609375">
+      <Text fill="#ed4e0e" layoutX="140.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter un Pret" wrappingWidth="178.74609375">
          <font>
             <Font size="24.0" />
          </font>
@@ -29,7 +29,17 @@
             <Image url="@LOA.png" />
          </image>
       </ImageView>
-      <Button layoutX="479.0" layoutY="420.0" mnemonicParsing="false" onAction="#affichePret" text="Afficher" />
+      <Button layoutX="479.0" layoutY="420.0" mnemonicParsing="false" onAction="#affichePret" style="-fx-background-color: orange;" text="Afficher" />
       <TextArea fx:id="typeTF" layoutX="253.0" layoutY="182.0" prefHeight="42.0" prefWidth="398.0" promptText="Type" />
+      <ImageView fitHeight="195.0" fitWidth="230.0" layoutX="43.0" layoutY="418.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@channels4_profile.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="170.0" fitWidth="152.0" layoutX="470.0" layoutY="457.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@37751427-client-member-icon-cyan-blue-square-button.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
