--- a/src/main/resources/Rembourssement.fxml
+++ b/src/main/resources/Rembourssement.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -14,11 +15,11 @@
       <Label layoutX="85.0" layoutY="196.0" text="Montant payee" />
       <Label layoutX="92.0" layoutY="295.0" text="periode retard" />
 
-      <TextField fx:id="moisCol" layoutX="229.0" layoutY="113.0" promptText="mois" />
-      <TextField fx:id="payeeCol" layoutX="239.0" layoutY="201.0" promptText="Montant payeé" />
-      <TextField fx:id="retardCol" layoutX="239.0" layoutY="283.0" promptText="periode retard" />
-      <Button layoutX="352.0" layoutY="415.0" mnemonicParsing="false" onAction="#ajoutRmb" style="-fx-background-color: blue;" text="ajouter" textFill="#d3d1e4" />
-      <Button layoutX="481.0" layoutY="415.0" mnemonicParsing="false" onAction="#afficheRmb" style="-fx-background-color: orange;" text="afficher" />
+      <TextField fx:id="moisCol" layoutX="229.0" layoutY="113.0" promptText="mois" styleClass="form_container" stylesheets="@style.css" />
+      <TextField fx:id="payeeCol" layoutX="229.0" layoutY="196.0" promptText="Montant payeé" styleClass="form_container" stylesheets="@style.css" />
+      <TextField fx:id="retardCol" layoutX="229.0" layoutY="285.0" promptText="periode retard" styleClass="form_container" stylesheets="@style.css" />
+      <Button layoutX="317.0" layoutY="415.0" mnemonicParsing="false" onAction="#ajoutRmb" prefHeight="40.0" prefWidth="102.0" style="-fx-background-color: blue;" text="ajouter" textFill="#d3d1e4" />
+      <Button layoutX="481.0" layoutY="415.0" mnemonicParsing="false" onAction="#afficheRmb" prefHeight="40.0" prefWidth="92.0" style="-fx-background-color: orange;" text="afficher" />
       <ImageView fitHeight="220.0" fitWidth="315.0" layoutX="462.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
 
       </ImageView>
@@ -27,10 +28,12 @@
             <Font size="47.0" />
          </font>
       </Label>
-      <ImageView fitHeight="231.0" fitWidth="349.0" layoutX="480.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="185.0" fitWidth="376.0" layoutX="450.0" layoutY="122.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@remboursement-avec-le-cheque-energie.jpg" />
          </image>
       </ImageView>
+      <Label layoutX="105.0" layoutY="362.0" text="id pret" />
+      <ChoiceBox fx:id="idCol" layoutX="232.0" layoutY="355.0" prefHeight="37.0" prefWidth="150.0" styleClass="form_container" stylesheets="@style.css" />
    </children>
 </AnchorPane>
